--- a/404.html
+++ b/404.html
@@ -12,7 +12,7 @@
       <div class="container">
         <div class="header__container">
           <a href="./index.html" class="logo">
-            <img src="./assets/image/logo.svg" alt="CompeteX" />
+            <img src="./assets/images/logo.svg" alt="CompeteX" />
           </a>
           <nav>
             <ul class="menu">
@@ -79,7 +79,7 @@
 		  <section class="error mb-m">
 			<div class="container">
 				<div class="error__container">
-					<img src="./assets/image/404.png" alt="OOPS, page not found">
+					<img src="./assets/images/404.png" alt="OOPS, page not found">
 					<h2>OOPS, page not found</h2>
 					<p>We're sorry, it looks like this page has been deleted, can't find it :( </p>
 					<a href="./index.html" class="green-btn">home page
@@ -96,7 +96,7 @@
   <div class="container">
 	<div class="footer__container">
 	  <a href="./index.html" class="logo">
-		<img src="./assets/image/logo.svg" alt="CompeteX" />
+		<img src="./assets/images/logo.svg" alt="CompeteX" />
 	  </a>
 	  <div class="footer__info">
 		<div class="footer__nav">
@@ -208,7 +208,7 @@
 	  <p>©2024 all rights reserved ”CompeteX Sport Events”</p>
 	  <div class="lumious">
 		<span>Development by</span>
-		<img src="./assets/image/lumios.svg" alt="Lumios" />
+		<img src="./assets/images/lumios.svg" alt="Lumios" />
 	  </div>
 	</div>
   </div>
