--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
       <div class="container">
         <div class="header__container">
           <a href="./index.html" class="logo">
-            <img src="./assets/image/logo.svg" alt="CompeteX" />
+            <img src="./assets/images/logo.svg" alt="CompeteX" />
           </a>
           <nav>
             <ul class="menu">
@@ -79,7 +79,7 @@
         <div class="container">
           <div class="about__container">
             <div class="about__img">
-              <img src="./assets/image/mission-img3.jpg" alt="judge" />
+              <img src="./assets/images/mission-img3.jpg" alt="judge" />
             </div>
             <div class="about__content">
               <div class="about__title title">
@@ -87,13 +87,8 @@
                 <h2>CompeteX: Transforming <span>Sports for All</span></h2>
               </div>
               <div class="about__text">
-                <p>
-					CompeteX Sport Events: Revolutionizing Sports Experiences for All
-					At CompeteX Sport Events, our mission is to transform the sports event industry by delivering exceptional and memorable experiences for everyone—from professional athletes to corporate teams and children's parties. Founded by a group of sports enthusiasts who saw the need for better-managed sports events, we are dedicated to offering top-tier, customized events that cater to diverse audiences. Our journey began with local, small-scale events and quickly expanded due to our reputation for excellence. 
-				</p>
-                <p>
-					Today, we provide a wide range of services including rigorous competitions for athletes, innovative team-building programs for corporate clients, and fun-filled sports-themed parties for children. Each event is designed to enhance participation, foster engagement, and create lasting memories, ensuring that every participant and spectator enjoys a truly outstanding experience.
-                </p>
+                <p>At CompeteX Sport Events, our mission is to transform the sports event industry by delivering exceptional and memorable experiences for everyone—from professional athletes to corporate teams and children's parties. Founded by a group of sports enthusiasts who saw the need for better-managed sports events, we are dedicated to offering top-tier, customized events that cater to diverse audiences. Our journey began with local, small-scale events and quickly expanded due to our reputation for excellence. </p>
+                <p>Today, we provide a wide range of services including rigorous competitions for athletes, innovative team-building programs for corporate clients, and fun-filled sports-themed parties for children. Each event is designed to enhance participation, foster engagement, and create lasting memories, ensuring that every participant and spectator enjoys a truly outstanding experience.</p>
               </div>
             </div>
           </div>
@@ -110,11 +105,11 @@
               <div class="mission__item double__img-item">
                 <div class="mission__item_images double__img-item-images">
                   <img
-                    src="./assets/image/mission-img1.jpg"
+                    src="./assets/images/slide-img2.jpg"
                     alt="Empowering Through Sport"
                   />
                   <img
-                    src="./assets/image/mission-img1.jpg"
+                    src="./assets/images/slide-img2.jpg"
                     alt="Empowering Through Sport"
                   />
                 </div>
@@ -128,12 +123,12 @@
               </div>
               <div class="mission__item double__img-item">
                 <div class="mission__item_images double__img-item-images">
-                  <img
-                    src="./assets/image/mission-img2.jpg"
+					<img
+                    src="./assets/images/mission-img3.jpg"
                     alt="Empowering Through Sport"
                   />
                   <img
-                    src="./assets/image/mission-img2.jpg"
+                    src="./assets/images/mission-img3.jpg"
                     alt="Empowering Through Sport"
                   />
                 </div>
@@ -147,14 +142,16 @@
               </div>
               <div class="mission__item double__img-item">
                 <div class="mission__item_images double__img-item-images">
-                  <img
-                    src="./assets/image/mission-img3.jpg"
+					<img
+                    src="./assets/images/mission-img2.jpg"
                     alt="Empowering Through Sport"
                   />
                   <img
-                    src="./assets/image/mission-img3.jpg"
+                    src="./assets/images/mission-img2.jpg"
                     alt="Empowering Through Sport"
                   />
+					
+					
                 </div>
                 <div class="mission__item_content double__img_content">
                   <h3>Experiences, Building Bonds</h3>
@@ -167,51 +164,7 @@
             </div>
           </div>
         </div>
-      </section>
-	  <section class="achievements mb-m">
-		<div class="container">
-			<div class="achievements__container">
-				<div class="achievements__title title">
-					<div>achievements</div>
-					<h2>our achievements in <span>organizing events</span></h2>
-				</div>
-				<div class="achievements__items">
-					<div class="achievements__item">
-						<div class="achievements__count">
-							<div>01</div>
-						<h3>4 Years in Business</h3>
-						</div>
-						<p>
-							CompeteX Sport Events has been a trusted name in the sports event industry for over eight years, consistently delivering top-tier events and exceptional experiences for all participants.
-						</p>
-					</div>
-					<div class="achievements__item">
-						<div class="achievements__count">
-							<div>02</div>
-							<h3>200 Events Organized</h3>
-						</div>
-						<p>We have successfully organized 204 diverse and memorable sports events, ranging from professional competitions to corporate team-building activities and children's parties.</p>
-					</div>
-					<div class="achievements__item">
-						<div class="achievements__count">
-							<div>03</div>
-							<h3>Expanded Clientele Base</h3>
-						</div>
-						<p>Starting from a small, local company, we have expanded our reach to serve a wide range of clients, including professional athletes, corporate organizations, and families, establishing a strong reputation for excellence.</p>
-					</div>
-					<div class="achievements__item">
-						<div class="achievements__count">
-							<div>04</div>
-							<h3>Innovative Corporate Programs</h3>
-						</div>
-						<p>
-							Our specialized corporate programs have been highly praised for their effectiveness in enhancing team building, leadership, and employee engagement, contributing to improved productivity and morale in numerous companies.
-						</p>
-					</div>
-				</div>
-			</div>
-		</div>
-	  </section>   
+      </section> 
 	  <section class="vision mb-m">
 		<div class="container">
 			<div class="vision__container">
@@ -222,58 +175,58 @@
 				<div class="vision__wrap">
 						<div class="vision__row"> 
 					<div class="vision__item">
-							<img src="./assets/image/mission-img3.jpg" alt="judges">
+							<img src="./assets/images/vision-img1.jpg" alt="judges">
 							<div class="vision__item_content">
 								<div class="green vision_count">
 									step #1
 								</div>
-								<p>The vision for CompeteX Sport Events began with a group of sports enthusiasts, who recognized the need for better-managed sports events thatnot only focus on competition but also on the overall experience of participants and spectators.</p>
+								<p>The vision for CompeteX Sport Events began with a group of sports enthusiasts, who recognized the need for better-managed sports events that not only focus on competition but also on the overall experience of participants and spectators.</p>
 							</div>
 						</div>
 						<div class="vision__arrow">
-							<img src="./assets/image/rotate-arrow.svg" alt="rotate arrow">
+							<img src="./assets/images/rotate-arrow.svg" alt="rotate arrow">
 						</div>
 					</div>
 					<div class="vision__row"> 
 						<div class="vision__item">
-							<img src="./assets/image/vision-img1.jpg" alt="judges">
+							<img src="./assets/images/vision-img2.jpg" alt="judges">
 							<div class="vision__item_content">
 								<div class="green vision_count">
-									step #1
+									step #2
 								</div>
-								<p>The vision for CompeteX Sport Events began with a group of sports enthusiasts, who recognized the need for better-managed sports events thatnot only focus on competition but also on the overall experience of participants and spectators.</p>
+								<p>Having participated in numerous sports events and recognizing the gaps in the market, they envisioned a company that could offer top-tier, customized sports events tailored to various audiences.</p>
 							</div>
 						</div>
 						<div class="vision__arrow">
-							<img src="./assets/image/rotate-arrow.svg" alt="rotate arrow">
+							<img src="./assets/images/rotate-arrow.svg" alt="rotate arrow">
 						</div>
 					</div>
 					<div class="vision__row"> 
 						<div class="vision__item">
-							<img src="./assets/image/vision-img2.jpg" alt="judges">
+							<img src="./assets/images/vision-img3.jpg" alt="judges">
 							<div class="vision__item_content">
 								<div class="green vision_count">
-									step #1
+									step #3
 								</div>
-								<p>The vision for CompeteX Sport Events began with a group of sports enthusiasts, who recognized the need for better-managed sports events thatnot only focus on competition but also on the overall experience of participants and spectators.</p>
+								<p>Starting as a small, locally-focused company, CompeteX Sport Events quickly gained a reputation for excellence. Our early events, which ranged from small-scale children's sports parties to corporate team-building exercises, were met with overwhelming positive feedback.</p>
 							</div>
 						</div>
 						<div class="vision__arrow">
-							<img src="./assets/image/rotate-arrow.svg" alt="rotate arrow">
+							<img src="./assets/images/rotate-arrow.svg" alt="rotate arrow">
 						</div>
 					</div>
 					<div class="vision__row"> 
 						<div class="vision__item">
-							<img src="./assets/image/vision-img3.jpg" alt="judges">
+							<img src="./assets/images/services-img2.jpg" alt="judges">
 							<div class="vision__item_content">
 								<div class="green vision_count">
-									step #1
+									step #4
 								</div>
-								<p>The vision for CompeteX Sport Events began with a group of sports enthusiasts, who recognized the need for better-managed sports events thatnot only focus on competition but also on the overall experience of participants and spectators.</p>
+								<p>This success fueled our expansion, allowing us to attract more diverse clientele and increase our event offerings.</p>
 							</div>
 						</div>
 						<div class="vision__arrow">
-							<img src="./assets/image/rotate-arrow.svg" alt="rotate arrow">
+							<img src="./assets/images/rotate-arrow.svg" alt="rotate arrow">
 						</div>
 					</div>
 				</div>
@@ -309,18 +262,6 @@
 					  <p>We organize accessible events for all athletes, providing rigorous competition and top-notch facilities to help them reach their full potential.</p>
 					</div>
 				  </div>
-				  <div class="who__scrolling_item scrolling_item">
-					<div class="who__scrolling_item-count scrolling_item-count">04</div>
-					<div class="who__scrolling_item-content scrolling_item-content">
-					  <h3>Professional and Inclusive</h3>
-					  <p>
-						We pride ourselves on delivering professional and inclusive
-						sports events, creating opportunities for everyone to
-						participate and enjoy, regardless of their age or skill
-						level.
-					  </p>
-					</div>
-				  </div>
 				</div>
 			  </div>
 		</div>
@@ -330,7 +271,7 @@
       <div class="container">
         <div class="footer__container">
           <a href="./index.html" class="logo">
-            <img src="./assets/image/logo.svg" alt="CompeteX" />
+            <img src="./assets/images/logo.svg" alt="CompeteX" />
           </a>
           <div class="footer__info">
             <div class="footer__nav">
@@ -442,7 +383,7 @@
           <p>©2024 all rights reserved ”CompeteX Sport Events”</p>
           <div class="lumious">
             <span>Development by</span>
-            <img src="./assets/image/lumios.svg" alt="Lumios" />
+            <img src="./assets/images/lumios.svg" alt="Lumios" />
           </div>
         </div>
       </div>
