--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
       <div class="container">
         <div class="header__container">
           <a href="./index.html" class="logo">
-            <img src="./assets/image/logo.svg" alt="CompeteX" />
+            <img src="./assets/images/logo.svg" alt="CompeteX" />
           </a>
           <nav>
             <ul class="menu">
@@ -117,14 +117,14 @@
 						<div class="contact__item">
 							<h3 class="contact__item_title">Our social</h3>
 							<div class="contact__item_info">
-								<a href="#">
+								<a href="#" target="_blank">
 									<svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 48 48" fill="none">
 									<ellipse cx="23.8481" cy="24" rx="23.8481" ry="24" fill="#0E0C15"/>
 									<path d="M31.9735 16.5625C30.0104 14.5937 27.3929 13.5 24.63 13.5C18.8861 13.5 14.2329 18.1667 14.2329 23.9271C14.2329 25.75 14.7418 27.5729 15.6143 29.1041L14.1602 34.5L19.6859 33.0416C21.2128 33.8437 22.8851 34.2812 24.63 34.2812C30.3739 34.2812 35.0272 29.6146 35.0272 23.8542C34.9545 21.1562 33.9366 18.5312 31.9735 16.5625ZM29.6469 27.6458C29.4287 28.2291 28.4108 28.8125 27.9019 28.8854C27.4656 28.9583 26.884 28.9583 26.3023 28.8125C25.9388 28.6666 25.4298 28.5208 24.8482 28.2292C22.2307 27.1354 20.5584 24.5104 20.413 24.2917C20.2676 24.1458 19.3224 22.9062 19.3224 21.5937C19.3224 20.2812 19.9768 19.6979 20.1949 19.4062C20.413 19.1146 20.7038 19.1146 20.922 19.1146C21.0674 19.1146 21.2855 19.1146 21.4309 19.1146C21.5763 19.1146 21.7944 19.0417 22.0126 19.5521C22.2307 20.0625 22.7396 21.375 22.8124 21.4479C22.8851 21.5937 22.8851 21.7396 22.8124 21.8854C22.7396 22.0312 22.6669 22.1771 22.5215 22.3229C22.3761 22.4687 22.2307 22.6875 22.158 22.7604C22.0126 22.9062 21.8672 23.0521 22.0126 23.2708C22.158 23.5625 22.6669 24.3646 23.4667 25.0937C24.4846 25.9687 25.2844 26.2604 25.5752 26.4062C25.8661 26.5521 26.0115 26.4792 26.1569 26.3333C26.3023 26.1875 26.8113 25.6042 26.9567 25.3125C27.1021 25.0208 27.3202 25.0937 27.5383 25.1667C27.7565 25.2396 29.0652 25.8958 29.2833 26.0417C29.5742 26.1875 29.7196 26.2604 29.7923 26.3333C29.865 26.5521 29.865 27.0625 29.6469 27.6458Z" fill="white"/>
 									</svg>
 									WhatsApp
 								</a>
-								<a href="#">
+								<a href="#" target="_blank">
 									<svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 48 48" fill="none">
 										<ellipse cx="24" cy="24" rx="24" ry="24" fill="#0E0C15"/>
 										<path fill-rule="evenodd" clip-rule="evenodd" d="M28 16H20C17.7909 16 16 17.7909 16 20V28C16 30.2091 17.7909 32 20 32H28C30.2091 32 32 30.2091 32 28V20C32 17.7909 30.2091 16 28 16ZM20 14C16.6863 14 14 16.6863 14 20V28C14 31.3137 16.6863 34 20 34H28C31.3137 34 34 31.3137 34 28V20C34 16.6863 31.3137 14 28 14H20Z" fill="white"/>
@@ -192,7 +192,7 @@
   <div class="container">
 	<div class="footer__container">
 	  <a href="./index.html" class="logo">
-		<img src="./assets/image/logo.svg" alt="CompeteX" />
+		<img src="./assets/images/logo.svg" alt="CompeteX" />
 	  </a>
 	  <div class="footer__info">
 		<div class="footer__nav">
@@ -304,7 +304,7 @@
 	  <p>©2024 all rights reserved ”CompeteX Sport Events”</p>
 	  <div class="lumious">
 		<span>Development by</span>
-		<img src="./assets/image/lumios.svg" alt="Lumios" />
+		<img src="./assets/images/lumios.svg" alt="Lumios" />
 	  </div>
 	</div>
   </div>
