--- a/gallery.html
+++ b/gallery.html
@@ -12,7 +12,7 @@
       <div class="container">
         <div class="header__container">
           <a href="./index.html" class="logo">
-            <img src="./assets/image/logo.svg" alt="CompeteX" />
+            <img src="./assets/images/logo.svg" alt="CompeteX" />
           </a>
           <nav>
             <ul class="menu">
@@ -79,68 +79,62 @@
         <div class="container">
           <div class="gallery__container">
             <div class="gallery__container_btns">
-              <div
-                class="gallery__container_btns-btn active-tab"
-                data-slug="all"
-              >
+              <!-- <div class="gallery__container_btns-btn active-tab" data-slug="all" >
                 all
-              </div>
+              </div> -->
               <div
                 class="gallery__container_btns-btn"
                 data-name="photo"
-                data-slug="photo"
-              >
+                data-slug="photo" >
                 photo
               </div>
               <div
                 class="gallery__container_btns-btn"
                 data-name="video"
-                data-slug="video"
-              >
+                data-slug="video">
                 video
               </div>
               <div
                 class="gallery__container_btns-btn"
                 data-name="jiu-jitsu"
-                data-slug="jiu-jitsu"
-              >
+                data-slug="jiu-jitsu">
                 Jiu Jitsu
               </div>
             </div>
             <div class="gallery__images">
               <img
                 class="gallery-image"
-                src="./assets/image/mission-img2.jpg"
+                src="./assets/images/mission-img2.jpg"
                 alt="gallery image"
               />
               <img
                 class="gallery-image"
-                src="./assets/image/mission-img1.jpg"
+                src="./assets/images/mission-img1.jpg"
                 alt="gallery image"
               />
 
               <img
                 class="gallery-image"
-                src="./assets/image/gallery-img1.jpg"
+                src="./assets/images/gallery-img1.jpg"
                 alt="gallery image"
                 data-slug="video"
               />
 
               <img
                 class="gallery-image"
-                src="./assets/image/mission-img1.jpg"
+                src="./assets/images/mission-img1.jpg"
                 alt="gallery image"
                 data-slug="photo"
               />
               <img
                 class="gallery-image"
-                src="./assets/image/mission-img2.jpg"
+                src="./assets/images/mission-img2.jpg"
                 alt="gallery image"
                 data-slug="jiu-jitsu"
               />
               <img
                 class="gallery-image"
-                src="./assets/image/gallery-img1.jpg"
+                src="./assets/images/gallery-img1.jpg"
                 alt="gallery image"
                 data-slug="photo"
               />
@@ -153,7 +147,7 @@
       <div class="container">
         <div class="footer__container">
           <a href="./index.html" class="logo">
-            <img src="./assets/image/logo.svg" alt="CompeteX" />
+            <img src="./assets/images/logo.svg" alt="CompeteX" />
           </a>
           <div class="footer__info">
             <div class="footer__nav">
@@ -265,7 +259,7 @@
           <p>©2024 all rights reserved ”CompeteX Sport Events”</p>
           <div class="lumious">
             <span>Development by</span>
-            <img src="./assets/image/lumios.svg" alt="Lumios" />
+            <img src="./assets/images/lumios.svg" alt="Lumios" />
           </div>
         </div>
       </div>
