--- a/news.html
+++ b/news.html
@@ -12,7 +12,7 @@
       <div class="container">
         <div class="header__container">
           <a href="./index.html" class="logo">
-            <img src="./assets/image/logo.svg" alt="CompeteX" />
+            <img src="./assets/images/logo.svg" alt="CompeteX" />
           </a>
           <nav>
             <ul class="menu">
@@ -80,7 +80,7 @@
           <div class="news__wrap">
             <div class="news__item">
               <a href="./post.html" class="news__link">
-                <img src="./assets/image/mission-img1.jpg" alt="news" />
+                <img src="./assets/images/mission-img1.jpg" alt="news" />
               </a>
               <div class="news__item_bottom">
                 <span class="news__date">23 apr, 2024</span>
@@ -92,7 +92,7 @@
             </div>
             <div class="news__item">
               <a href="./post.html" class="news__link">
-                <img src="./assets/image/mission-img3.jpg" alt="news" />
+                <img src="./assets/images/mission-img3.jpg" alt="news" />
               </a>
               <div class="news__item_bottom">
                 <span class="news__date">23 apr, 2024</span>
@@ -104,7 +104,7 @@
             </div>
             <div class="news__item">
               <a href="./post.html" class="news__link">
-                <img src="./assets/image/mission-img1.jpg" alt="news" />
+                <img src="./assets/images/mission-img1.jpg" alt="news" />
               </a>
               <div class="news__item_bottom">
                 <span class="news__date">23 apr, 2024</span>
@@ -116,7 +116,7 @@
             </div>
             <div class="news__item">
               <a href="./post.html" class="news__link">
-                <img src="./assets/image/gallery-img2.jpg" alt="news" />
+                <img src="./assets/images/gallery-img2.jpg" alt="news" />
               </a>
               <div class="news__item_bottom">
                 <span class="news__date">23 apr, 2024</span>
@@ -128,7 +128,7 @@
             </div>
             <div class="news__item">
               <a href="./post.html" class="news__link">
-                <img src="./assets/image/slide-img1.jpg" alt="news" />
+                <img src="./assets/images/slide-img1.jpg" alt="news" />
               </a>
               <div class="news__item_bottom">
                 <span class="news__date">23 apr, 2024</span>
@@ -146,7 +146,7 @@
       <div class="container">
         <div class="footer__container">
           <a href="./index.html" class="logo">
-            <img src="./assets/image/logo.svg" alt="CompeteX" />
+            <img src="./assets/images/logo.svg" alt="CompeteX" />
           </a>
           <div class="footer__info">
             <div class="footer__nav">
@@ -258,7 +258,7 @@
           <p>©2024 all rights reserved ”CompeteX Sport Events”</p>
           <div class="lumious">
             <span>Development by</span>
-            <img src="./assets/image/lumios.svg" alt="Lumios" />
+            <img src="./assets/images/lumios.svg" alt="Lumios" />
           </div>
         </div>
       </div>
