--- a/services.html
+++ b/services.html
@@ -12,7 +12,7 @@
       <div class="container">
         <div class="header__container">
           <a href="./index.html" class="logo">
-            <img src="./assets/image/logo.svg" alt="CompeteX" />
+            <img src="./assets/images/logo.svg" alt="CompeteX" />
           </a>
           <nav>
             <ul class="menu">
@@ -85,75 +85,61 @@
 				  <h2>our services that <span>we provide</span></h2>
 				</div>
 				<div class="services__wrap">
-				  <div class="services__item">
-					<div class="services__item_content">
-					  <div class="service_count green">1 service</div>
-					  <h3>Jiu Jitsu Competition Package for Children's Parties</h3>
-					  <p>
-						Ready to add excitement and healthy competition to your
-						child's party? CompeteX Sport Events specializes in
-						thrilling Jiu Jitsu competitions tailored for kids' parties!
-					  </p>
-					  <a href="./services.html" class="btn">read more
-						<svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10" fill="none">
-							<path d="M10.7353 0.757395C10.7353 0.343181 10.3995 0.0073947 9.98528 0.00739485L3.23528 0.00739443C2.82107 0.00739443 2.48528 0.343181 2.48528 0.757395C2.48528 1.17161 2.82107 1.50739 3.23528 1.50739H9.23528V7.50739C9.23528 7.92161 9.57107 8.25739 9.98528 8.25739C10.3995 8.25739 10.7353 7.92161 10.7353 7.50739L10.7353 0.757395ZM2.03033 9.77301L10.5156 1.28772L9.45495 0.227064L0.96967 8.71235L2.03033 9.77301Z" fill="#2CA656"/>
-							</svg>
-					  </a>
+					<div class="services__item">
+					  <div class="services__item_content">
+						<div class="service_count green">1 service</div>
+						<h3>Jiu Jitsu Competition Package for Children's Parties</h3>
+						<p>Ready to add excitement and healthy competition to your child's party? CompeteX Sport Events specializes in thrilling Jiu Jitsu competitions tailored for kids' parties!</p>
+						<a href="./service-page.html" class="btn">read more
+						  <svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10" fill="none">
+							  <path d="M10.7353 0.757395C10.7353 0.343181 10.3995 0.0073947 9.98528 0.00739485L3.23528 0.00739443C2.82107 0.00739443 2.48528 0.343181 2.48528 0.757395C2.48528 1.17161 2.82107 1.50739 3.23528 1.50739H9.23528V7.50739C9.23528 7.92161 9.57107 8.25739 9.98528 8.25739C10.3995 8.25739 10.7353 7.92161 10.7353 7.50739L10.7353 0.757395ZM2.03033 9.77301L10.5156 1.28772L9.45495 0.227064L0.96967 8.71235L2.03033 9.77301Z" fill="#2CA656"/>
+							  </svg>
+						</a>
+					  </div>
+					  <div class="services__item_img">
+						<img
+						  src="./assets/images/services-img1.jpg"
+						  alt="Jiu Jitsu Competition Package for Children's Parties"
+						/>
+					  </div>
 					</div>
-					<div class="services__item_img">
-					  <img
-						src="./assets/image/services-img1.jpg"
-						alt="Jiu Jitsu Competition Package for Children's Parties"
-					  />
+					<div class="services__item">
+					  <div class="services__item_content">
+						<div class="service_count green">2 service</div>
+						<h3>CompeteX Jiu Jitsu Corporate Events</h3>
+						<p>CompeteX Sport Events offers corporate clients unique Jiu Jitsu events that combine competition and team-building. This boosts morale, strengthens team bonds, and creates unforgettable experiences.</p>
+						<a href="./service-page.html" class="btn">read more
+						  <svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10" fill="none">
+							  <path d="M10.7353 0.757395C10.7353 0.343181 10.3995 0.0073947 9.98528 0.00739485L3.23528 0.00739443C2.82107 0.00739443 2.48528 0.343181 2.48528 0.757395C2.48528 1.17161 2.82107 1.50739 3.23528 1.50739H9.23528V7.50739C9.23528 7.92161 9.57107 8.25739 9.98528 8.25739C10.3995 8.25739 10.7353 7.92161 10.7353 7.50739L10.7353 0.757395ZM2.03033 9.77301L10.5156 1.28772L9.45495 0.227064L0.96967 8.71235L2.03033 9.77301Z" fill="#2CA656"/>
+							  </svg>
+						</a>
+					  </div>
+					  <div class="services__item_img">
+						<img
+						  src="./assets/images/services-img2.jpg"
+						  alt="CompeteX Jiu Jitsu Corporate Events"
+						/>
+					  </div>
 					</div>
-				  </div>
-				  <div class="services__item">
-					<div class="services__item_content">
-					  <div class="service_count green">2 service</div>
-					  <h3>Jiu Jitsu Corporate Events</h3>
-					  <p>
-						CompeteX Sport Events offers corporate clients unique Jiu
-						Jitsu events that combine competition and team-building.
-						This boosts morale, strengthens team bonds, and creates
-						unforgettable experiences.
-					  </p>
-					  <a href="./services.html" class="btn">read more
-						<svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10" fill="none">
-							<path d="M10.7353 0.757395C10.7353 0.343181 10.3995 0.0073947 9.98528 0.00739485L3.23528 0.00739443C2.82107 0.00739443 2.48528 0.343181 2.48528 0.757395C2.48528 1.17161 2.82107 1.50739 3.23528 1.50739H9.23528V7.50739C9.23528 7.92161 9.57107 8.25739 9.98528 8.25739C10.3995 8.25739 10.7353 7.92161 10.7353 7.50739L10.7353 0.757395ZM2.03033 9.77301L10.5156 1.28772L9.45495 0.227064L0.96967 8.71235L2.03033 9.77301Z" fill="#2CA656"/>
-							</svg>
-					  </a>
-					</div>
-					<div class="services__item_img">
-					  <img
-						src="./assets/image/services-img2.jpg"
-						alt="Jiu Jitsu Corporate Events"
-					  />
-					</div>
-				  </div>
-				  <div class="services__item">
-					<div class="services__item_content">
-					  <div class="service_count green">3 service</div>
-					  <h3>Jiu Jitsu Competition Package</h3>
-					  <p>
-						At CompeteX Sport Events, we bring the thrill of Jiu Jitsu
-						to corporate clients. Our packages combine expert event
-						management with team-building excitement, ensuring a
-						successful and memorable experience for all.
-					  </p>
-					  <a href="./services.html" class="btn">read more
-						<svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10" fill="none">
-							<path d="M10.7353 0.757395C10.7353 0.343181 10.3995 0.0073947 9.98528 0.00739485L3.23528 0.00739443C2.82107 0.00739443 2.48528 0.343181 2.48528 0.757395C2.48528 1.17161 2.82107 1.50739 3.23528 1.50739H9.23528V7.50739C9.23528 7.92161 9.57107 8.25739 9.98528 8.25739C10.3995 8.25739 10.7353 7.92161 10.7353 7.50739L10.7353 0.757395ZM2.03033 9.77301L10.5156 1.28772L9.45495 0.227064L0.96967 8.71235L2.03033 9.77301Z" fill="#2CA656"/>
-							</svg>
-					  </a>
-					</div>
-					<div class="services__item_img">
-					  <img
-						src="./assets/image/services-img1.jpg"
-						alt="Jiu Jitsu Competition Package"
-					  />
+					<div class="services__item">
+					  <div class="services__item_content">
+						<div class="service_count green">3 service</div>
+						<h3>Jiu Jitsu Competition Package</h3>
+						<p>At CompeteX Sport Events, we bring the thrill of Jiu Jitsu to corporate clients. Our packages combine expert event management with team-building excitement, ensuring a successful and memorable experience for all.</p>
+						<a href="./service-page.html" class="btn">read more
+						  <svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10" fill="none">
+							  <path d="M10.7353 0.757395C10.7353 0.343181 10.3995 0.0073947 9.98528 0.00739485L3.23528 0.00739443C2.82107 0.00739443 2.48528 0.343181 2.48528 0.757395C2.48528 1.17161 2.82107 1.50739 3.23528 1.50739H9.23528V7.50739C9.23528 7.92161 9.57107 8.25739 9.98528 8.25739C10.3995 8.25739 10.7353 7.92161 10.7353 7.50739L10.7353 0.757395ZM2.03033 9.77301L10.5156 1.28772L9.45495 0.227064L0.96967 8.71235L2.03033 9.77301Z" fill="#2CA656"/>
+							  </svg>
+						</a>
+					  </div>
+					  <div class="services__item_img">
+						<img
+						  src="./assets/images/services-img1.jpg"
+						  alt="Jiu Jitsu Competition Package"
+						/>
+					  </div>
 					</div>
 				  </div>
-				</div>
 			  </div>
 			</div>
 		  </section>
@@ -162,7 +148,7 @@
   <div class="container">
 	<div class="footer__container">
 	  <a href="./index.html" class="logo">
-		<img src="./assets/image/logo.svg" alt="CompeteX" />
+		<img src="./assets/images/logo.svg" alt="CompeteX" />
 	  </a>
 	  <div class="footer__info">
 		<div class="footer__nav">
@@ -274,7 +260,7 @@
 	  <p>©2024 all rights reserved ”CompeteX Sport Events”</p>
 	  <div class="lumious">
 		<span>Development by</span>
-		<img src="./assets/image/lumios.svg" alt="Lumios" />
+		<img src="./assets/images/lumios.svg" alt="Lumios" />
 	  </div>
 	</div>
   </div>
