--- a/post.html
+++ b/post.html
@@ -12,7 +12,7 @@
       <div class="container">
         <div class="header__container">
           <a href="./index.html" class="logo">
-            <img src="./assets/image/logo.svg" alt="CompeteX" />
+            <img src="./assets/images/logo.svg" alt="CompeteX" />
           </a>
           <nav>
             <ul class="menu">
@@ -80,7 +80,7 @@
 		<div class="page-main mb-m">
 			<div class="main-content">
 				<article class="article">
-					<img src="./assets/image/mission-img1.jpg" alt="Children's Jiu-Jitsu Tournament “Young Warrior”">
+					<img src="./assets/images/mission-img1.jpg" alt="Children's Jiu-Jitsu Tournament “Young Warrior”">
 					<h2>Children's Jiu-Jitsu Tournament “Young Warrior”</h2>
 					<p>Children's Jiu-Jitsu Tournament “Young Warrior” gathered more than 100 young athletes aged from 6 to 14 years old. Children fought in various weight and age categories, demonstrating perseverance and tenacity.</p>
 					<ul>
@@ -94,7 +94,7 @@
 					<li>Friendly and respectful atmosphere</li>
 					<li>Importance in the education of young fighters</li>	
 					</ul>
-					<img src="./assets/image/mission-img1.jpg" alt="Children's Jiu-Jitsu Tournament “Young Warrior”">
+					<img src="./assets/images/mission-img1.jpg" alt="Children's Jiu-Jitsu Tournament “Young Warrior”">
 					<h3>Opening Ceremony</h3>
 					<p>The event began with a welcoming speech of the main organizer of the tournament, coach Sergey Ivanov. He emphasized the importance of such competitions for the development of young athletes and thanked everyone for their participation.</p>
 					<h4>Opening Ceremony</h4>
@@ -109,7 +109,7 @@
 				<div class="navbar__wrap">
 					<div class="news__item">
 						<a href="./post.html" class="news__link">
-						  <img src="./assets/image/mission-img1.jpg" alt="news" />
+						  <img src="./assets/images/mission-img1.jpg" alt="news" />
 						</a>
 						<div class="news__item_bottom">
 						  <span class="news__date">23 apr, 2024</span>
@@ -121,7 +121,7 @@
 					  </div>
 					  <div class="news__item">
 						<a href="./post.html" class="news__link">
-						  <img src="./assets/image/mission-img3.jpg" alt="news" />
+						  <img src="./assets/images/mission-img3.jpg" alt="news" />
 						</a>
 						<div class="news__item_bottom">
 						  <span class="news__date">23 apr, 2024</span>
@@ -133,7 +133,7 @@
 					  </div>
 					  <div class="news__item">
 						<a href="./post.html" class="news__link">
-						  <img src="./assets/image/mission-img1.jpg" alt="news" />
+						  <img src="./assets/images/mission-img1.jpg" alt="news" />
 						</a>
 						<div class="news__item_bottom">
 						  <span class="news__date">23 apr, 2024</span>
@@ -157,7 +157,7 @@
       <div class="container">
         <div class="footer__container">
           <a href="./index.html" class="logo">
-            <img src="./assets/image/logo.svg" alt="CompeteX" />
+            <img src="./assets/images/logo.svg" alt="CompeteX" />
           </a>
           <div class="footer__info">
             <div class="footer__nav">
@@ -269,7 +269,7 @@
           <p>©2024 all rights reserved ”CompeteX Sport Events”</p>
           <div class="lumious">
             <span>Development by</span>
-            <img src="./assets/image/lumios.svg" alt="Lumios" />
+            <img src="./assets/images/lumios.svg" alt="Lumios" />
           </div>
         </div>
       </div>
