--- a/gallery.html
+++ b/gallery.html
@@ -79,9 +79,9 @@
         <div class="container">
           <div class="gallery__container">
             <div class="gallery__container_btns">
-              <!-- <div class="gallery__container_btns-btn active-tab" data-slug="all" >
+              <div class="gallery__container_btns-btn active-tab" data-slug="all" >
                 all
-              </div> -->
+              </div>
               <div
                 class="gallery__container_btns-btn"
                 data-name="photo"
