added style for slider

--- a/index.html
+++ b/index.html
@@ -169,6 +169,18 @@
               <div class="swiper-slide  move-slide">
                 <img src="./assets/images/slide-img4.jpg" alt="about image" />
               </div>
+              <div class="swiper-slide  move-slide">
+                <img src="./assets/images/mission-img3.jpg" alt="about image" />
+              </div>
+              <div class="swiper-slide  move-slide">
+                <img src="./assets/images/slide-img2.jpg" alt="about image" />
+              </div>
+              <div class="swiper-slide  move-slide">
+                <img src="./assets/images/slide-img3.jpg" alt="about image" />
+              </div>
+              <div class="swiper-slide  move-slide">
+                <img src="./assets/images/slide-img4.jpg" alt="about image" />
+              </div>
               
               <div class="swiper-slide  move-slide">
                 <img src="./assets/images/mission-img3.jpg" alt="about image" />
